--- a/UnNamedWeibo/DetailWeiboView.xib
+++ b/UnNamedWeibo/DetailWeiboView.xib
@@ -8,7 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="318"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kitten" translatesAutoresizingMaskIntoConstraints="NO" id="jZ2-Pk-TuL">
@@ -70,6 +70,8 @@
                 <constraint firstItem="HuO-dr-xik" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="u2o-Ha-Ml8"/>
                 <constraint firstAttribute="trailing" secondItem="n2l-8k-wCG" secondAttribute="trailing" constant="20" id="uKY-Kc-nDZ"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="296" y="250"/>
         </view>
     </objects>
     <resources>
