--- a/UnNamedWeibo/Base.lproj/Main.storyboard
+++ b/UnNamedWeibo/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                                                 <constraint firstAttribute="width" constant="100" id="tOO-gd-ZdN"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -570,7 +570,7 @@
         <!--MainTabViewController-->
         <scene sceneID="JDB-aO-pyc">
             <objects>
-                <tabBarController title="MainTabViewController" automaticallyAdjustsScrollViewInsets="NO" id="VFi-yD-54H" customClass="RAMAnimatedTabBarController" customModule="UnNamedWeibo" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController title="MainTabViewController" automaticallyAdjustsScrollViewInsets="NO" hidesBottomBarWhenPushed="YES" id="VFi-yD-54H" customClass="RAMAnimatedTabBarController" customModule="UnNamedWeibo" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="aZc-uK-BkW">
